--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,72 @@
-# GitHub Action for Laravel
-name: Testing Laravel
+# GitHub Action for Laravel with MySQL and Redis
+name: API
 on: [push, pull_request]
 jobs:
   laravel:
-    name: Laravel (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
-    runs-on: ${{ matrix.operating-system }}
+    name: Laravel (PHP ${{ matrix.php-versions }})
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: 'secret'
+          MYSQL_DATABASE: 'content_information_test'
+          MYSQL_USER: 'homestead'
+          MYSQL_PASSWORD: 'secret'
+        ports:
+          - 33306:3306/tcp
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      redis:
+        image: redis
+        ports:
+          - 6379/tcp
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [windows-latest]
-        php-versions: ['7.3', '7.4']
+        php-versions: ['7.4']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup PHP, with composer and extensions
-        uses: shivammathur/setup-php@develop #https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, dom, fileinfo
+          extensions: mbstring, dom, fileinfo, mysql
           coverage: xdebug #optional
+      - name: Start mysql service
+        run: sudo /etc/init.d/mysql start
       - name: Get composer cache directory
-        id: composer-cache
+        id: composercache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
       - name: Cache composer dependencies
         uses: actions/cache@v2
         with:
-          path: ${{ steps.composer-cache.outputs.dir }}
+          path: ${{ steps.composercache.outputs.dir }}
           # Use composer.json for key, if composer.lock is not committed.
           # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
-      - name: Prepare the application
-        run: |
-          php -r "file_exists('.env') || copy('.env.example', '.env');"
-          php artisan key:generate
-      - name: Clear Config
-        run: php artisan config:clear
-      - name: Test with phpunit
-        run: vendor/bin/phpunit --coverage-text
+      - name: Copy Env File
+        run: cp .env.testing .env
+      - name: Setup database user
+        run: mysql -u runner -e 'CREATE USER 'worker'@'localhost' IDENTIFIED BY 'secret';'
+      - name: Flush privileges
+        run: mysql -u worker --password=secret -e 'FLUSH PRIVILEGES;'
+      - name: Create testing database
+        run: mysql -u worker --password=secret -e 'CREATE DATABASE IF NOT EXISTS content_information_test;'
+      - run: echo ${{ job.services.redis.ports['3306'] }}  
+      - name: Migrate Test Database
+        run: php artisan migrate --seed --force
+        env:
+          DB_PORT: 33306:3306/tcp
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+      - name: Change Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        run: vendor/bin/phpunit
+        env:
+          DB_PORT: 33306:3306/tcp
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
